k8s/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    name: webapp
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
  selector:
    name: webapp
